[package]
name = "mark_iv"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.5"
rp-pico = "0.3.0"
embedded-time = "0.12.1"
rp2040-boot2 = "0.2.0"
defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
ht16k33 = { version = "0.4.0", default-features = false }
adafruit-alphanum4 = { version = "0.1.0", default-features = false  }
ascii = { version = "1.0", default-features = false }
num-traits = {version = "0.2.14", default-features = false}
